nothing really new

--- a/eel_website/css_styles/sensor_grid.css
+++ b/eel_website/css_styles/sensor_grid.css
@@ -7,6 +7,11 @@
 	border-radius: 25px;
 	padding: 10px;
 	margin: 10px;
-	font-size: 20px;
+	font-size: 1vw;
 	text-align: center;
   }
+  
+sensor.txt_sensor_value{
+	display: block;
+	
+}
