--- a/eel_website/css_styles/custom_font.css
+++ b/eel_website/css_styles/custom_font.css
@@ -1,241 +1,79 @@
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.3.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'vrp-font';
+	src:url('../fonts/vrp-font.eot?-eaq29v');
+	src:url('../fonts/vrp-font.eot?#iefix-eaq29v') format('embedded-opentype'),
+		url('../fonts/vrp-font.ttf?-eaq29v') format('truetype'),
+		url('../fonts/vrp-font.woff?-eaq29v') format('woff'),
+		url('../fonts/vrp-font.svg?-eaq29v#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  transform: translate(0, 0);
-}
-/* makes the font 33% larger relative to the icon container */
-.fa-lg {
-  font-size: 1.33333333em;
-  line-height: 0.75em;
-  vertical-align: -15%;
-}
-.fa-2x {
-  font-size: 2em;
-}
-.fa-3x {
-  font-size: 3em;
-}
-.fa-4x {
-  font-size: 4em;
-}
-.fa-5x {
-  font-size: 5em;
-}
-.fa-fw {
-  width: 1.28571429em;
-  text-align: center;
-}
-.fa-ul {
-  padding-left: 0;
-  margin-left: 2.14285714em;
-  list-style-type: none;
-}
-.fa-ul > li {
-  position: relative;
-}
-.fa-li {
-  position: absolute;
-  left: -2.14285714em;
-  width: 2.14285714em;
-  top: 0.14285714em;
-  text-align: center;
-}
-.fa-li.fa-lg {
-  left: -1.85714286em;
-}
-.fa-border {
-  padding: .2em .25em .15em;
-  border: solid 0.08em #eeeeee;
-  border-radius: .1em;
-}
-.pull-right {
-  float: right;
-}
-.pull-left {
-  float: left;
-}
-.fa.pull-left {
-  margin-right: .3em;
-}
-.fa.pull-right {
-  margin-left: .3em;
-}
-.fa-spin {
-  -webkit-animation: fa-spin 2s infinite linear;
-  animation: fa-spin 2s infinite linear;
-}
-.fa-pulse {
-  -webkit-animation: fa-spin 1s infinite steps(8);
-  animation: fa-spin 1s infinite steps(8);
-}
-@-webkit-keyframes fa-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@keyframes fa-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-.fa-rotate-90 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
-  -webkit-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-.fa-rotate-180 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-.fa-rotate-270 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-  -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  transform: rotate(270deg);
-}
-.fa-flip-horizontal {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
-  -webkit-transform: scale(-1, 1);
-  -ms-transform: scale(-1, 1);
-  transform: scale(-1, 1);
-}
-.fa-flip-vertical {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
-  -webkit-transform: scale(1, -1);
-  -ms-transform: scale(1, -1);
-  transform: scale(1, -1);
-}
-:root .fa-rotate-90,
-:root .fa-rotate-180,
-:root .fa-rotate-270,
-:root .fa-flip-horizontal,
-:root .fa-flip-vertical {
-  filter: none;
-}
-.fa-stack {
-  position: relative;
-  display: inline-block;
-  width: 2em;
-  height: 2em;
-  line-height: 2em;
-  vertical-align: middle;
-}
-.fa-stack-1x,
-.fa-stack-2x {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  text-align: center;
-}
-.fa-stack-1x {
-  line-height: inherit;
-}
-.fa-stack-2x {
-  font-size: 2em;
-}
-.fa-inverse {
-  color: #ffffff;
+[class^="icon-vr-"], [class*=" icon-vr-"] {
+	font-family: 'vrp-font';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 /*these are the custom fonts*/
-.vr-pc:before {
-  content: "\f109";
+
+/*generated through http://www.icomoon.io*/
+.icon-vr-questionmark:before {
+	content: "\f000";
 }
-
-.vr-temp:before {
-  content: "\f0eb";
+.icon-vr-chair:before {
+	content: "\f001";
 }
-
-.vr-hum:before {
-  content: "\f128";
+.icon-vr-door:before {
+	content: "\f002";
 }
-
-.vr-chair:before {
-  content: "\f128";
+.icon-vr-fan:before {
+	content: "\f003";
 }
-
-.vr-door:before {
-  content: "\f128";
+.icon-vr-hum:before {
+	content: "\f004";
 }
-
-.vr-lightbulb:before {
-  content: "\f128";
+.icon-vr-temp:before {
+	content: "\f005";
 }
-
-.vr-window:before {
-  content: "\f128";
+.icon-vr-blinds:before {
+	content: "\f006";
 }
-
-.vr-lightbulb:before {
-  content: "\f128";
+.icon-vr-camera:before {
+	content: "\f007";
 }
-
-.vr-fan:before {
-  content: "\f128";
+.icon-vr-window:before {
+	content: "\f008";
 }
-
-.vr-heat:before {
-  content: "\f128";
+.icon-vr-drop:before {
+	content: "\f009";
 }
-
-.vr-blinds:before {
-  content: "\f039";
+.icon-vr-questionmark-circle:before {
+	content: "\f00a";
 }
-
-.vr-smoke:before {
-  content: "\f128";
+.icon-vr-flame:before {
+	content: "\f00b";
 }
-
-.vr-time:before {
-  content: "\f128";
+.icon-vr-bolt:before {
+	content: "\f00c";
 }
-
-.vr-switch:before {
-  content: "\f128";
+.icon-vr-lightbulb:before {
+	content: "\f00d";
 }
-
-.vr-day-night:before {
-  content: "\f128";
+.icon-vr-pc:before {
+	content: "\f00e";
 }
-
-.vr-bolt:before {
-  content: "\f0e7";
+.icon-vr-day-night:before {
+	content: "\f00f";
 }
-
-.vr-question-circle:before {
-  content: "\f059";
-}
-
-
-
-
-
-
 
 
 
