--- a/eel_website/css_styles/custom_font.css
+++ b/eel_website/css_styles/custom_font.css
@@ -1,15 +1,13 @@
 @font-face {
 	font-family: 'vrp-font';
-	src:url('../fonts/vrp-font.eot?-eaq29v');
-	src:url('../fonts/vrp-font.eot?#iefix-eaq29v') format('embedded-opentype'),
-		url('../fonts/vrp-font.ttf?-eaq29v') format('truetype'),
-		url('../fonts/vrp-font.woff?-eaq29v') format('woff'),
-		url('../fonts/vrp-font.svg?-eaq29v#icomoon') format('svg');
+	src: url('../fonts/vrp-font.eot?-eaq29v');
+	src: url('../fonts/vrp-font.eot?#iefix-eaq29v') format('embedded-opentype'), url('../fonts/vrp-font.ttf?-eaq29v') format('truetype'), url('../fonts/vrp-font.woff?-eaq29v') format('woff'), url('../fonts/vrp-font.svg?-eaq29v#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 [class^="icon-vr-"], [class*=" icon-vr-"] {
+	vertical-align: center;
 	font-family: 'vrp-font';
 	speak: none;
 	font-style: normal;
@@ -17,7 +15,6 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -74,8 +71,4 @@
 .icon-vr-day-night:before {
 	content: "\f00f";
 }
-
-
-
-
 
