--- a/eel_website/css_styles/sensor_site.css
+++ b/eel_website/css_styles/sensor_site.css
@@ -1,21 +1,21 @@
-body { 
-	padding-top: 55px; 
+body {
+	background: #444;
+	padding-top: 70px;
 }
 
-div.sensor_container{
-	background:#444; 
-	display:flex;
+div.sensor_container {
+	background: #444;
+	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-around;
 }
 
-div.sensor_dummy{
+div.sensor_dummy {
 	float: left;
 	position: relative;
-	min-width:125px;
-	max-width:200px;
-	width: 12.5%;
+	min-width: 100px;
+	width: 10%;
 	background: transparent;
 	margin: 10px;
 }
@@ -23,23 +23,21 @@ div.sensor_dummy{
 div.sensor {
 	float: left;
 	position: relative;
-	min-width:125px;
-	max-width:200px;
-	width: 12.5%;
+	min-width: 100px;
+	width: 10%;
 	background: #ddd;
 	border-radius: 25px;
 	margin: 10px;
 	text-align: center;
-
 }
 
-.no-touch div.sensor:hover{
+.no-touch div.sensor:hover {
 	background: #aaa;
 	transition: background 0.3s ease;
 	transform: scale(1.1);
 }
 
-div.sensor:active{
+div.sensor:active {
 	background: #aaa;
 	transition: background 0.3s ease;
 	transform: scale(1.1);
@@ -49,92 +47,77 @@ div.dummy {
 	margin-top: 100%;
 }
 
-div.sensor_data{
+div.sensor_data {
 	position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
-span.sensor_name{
-	width:100%;
+span.sensor_name {
+	width: 100%;
 	text-align: center;
-	position:absolute;
- 	top:5%;
+	position: absolute;
+	top: 5%;
 	display: block;
-	font-size:1.1vw;
+	font-size: 1vmax;
 }
 
-span.sensor_value{
-	width:100%;
+span.sensor_value {
+	width: 100%;
 	text-align: center;
-	position:absolute;
- 	bottom:5%;
+	position: absolute;
+	bottom: 5%;
 	display: block;
-	font-size:1vw;
+	font-size: 1vw;
 }
-
 
 /*used for setting the image font color*/
 
-div.sensor_data i{
-	position:absolute;
-	top:20%;
-	left:50%;
+div.sensor_data i {
+	position: absolute;
+	top: 20%;
+	left: 50%;
 	margin-right: -50%;
 	transform: translate(-50%, -50%);
-
 }
 
-
-div.sensor_data i.standby{
-	position:absolute;
-	top:50%;
-	left:50%;
-	font-size: 5vw;
+div.sensor_data i.standby {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 6vmax;
 	color: #eee;
 }
 
-div.sensor_data i.on{
-	position:absolute;
-	top:50%;
-	left:50%;
-	font-size: 5vw;
+div.sensor_data i.on {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 6vmax;
 	color: #48a770;
 }
 
-div.sensor_data i.off{
-	position:absolute;
-	top:50%;
-	left:50%;
-	font-size: 5vw;
+div.sensor_data i.off {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 16px;
+	font-size: 6vmax;
 	color: #444;
 }
 
-
-.tooltip.popup .tooltip-inner{
-	text-align:left;
+.tooltip.popup .tooltip-inner {
+	text-align: left;
 	height: 200px;
 	color: #FF0000;
 	background-color: #ffff66;
 	box-shadow: 0 6px 12px rgba(0,0,0,.175);
-	white-space:pre-wrap;
+	white-space: pre-wrap;
 }
 
-.icon-vr-questionmark-circle.blue {
-  color:#428bca;
-  float:right;
-  font-size:2vh;
+.divider-vertical {
+	margin-left: 10px;
+	margin-right: 10px;
 }
-
-nav.center{
-	padding:10px;
-	vertical-align:center;
-}
-
-.divider-vertical{
-	margin-left:10px;
-	margin-right:10px;
-}
-
