--- a/server/src/els/view/Main.fxml
+++ b/server/src/els/view/Main.fxml
@@ -2,33 +2,54 @@
 
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.TextFlow?>
 <BorderPane fx:controller="els.controller.FXMLMainController" xmlns:fx="http://javafx.com/fxml">
+
     <top>
-        <Button fx:id="databaseLogButton" text="Database Controller"/>
+        <Button fx:id="databaseLogButton" text="Database Controller">
+            <BorderPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </BorderPane.margin>
+        </Button>
     </top>
 
     <left>
-        <TextFlow fx:id="infoTextArea" prefWidth="200" maxWidth="300" styleClass="padding-top"/> <!-- //todo fix width-->
+        <TextFlow fx:id="infoTextFlow" prefWidth="200" maxWidth="250" styleClass="infoTextFlow"/>
+        <!-- //todo fix width-->
     </left>
 
     <center>
         <ScrollPane fx:id="sensorsScrollPane" fitToWidth="true">
-            <FlowPane fx:id="sensorsFlowPane">
-            </FlowPane>
+            <TilePane fx:id="sensorsFlowPane" vgap="10" hgap="10" alignment="CENTER" style="-fx-background-color:#444;"/>
         </ScrollPane>
     </center>
 
     <bottom>
-        <Label fx:id="infoLabel" BorderPane.alignment="CENTER_RIGHT" text="Info Label"/>
+        <HBox>
+            <HBox>
+
+            </HBox>
+            <Region HBox.hgrow="ALWAYS"/>
+            <HBox>
+                <Label fx:id="infoLabel" text="Info Label" style="-fx-text-fill:#bbd"/>
+            </HBox>
+            <BorderPane.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </BorderPane.margin>
+        </HBox>
+
+
     </bottom>
 
     <stylesheets>
-        <URL value="@/els/view/main.css" />
+        <URL value="@/els/view/main.css"/>
     </stylesheets>
 </BorderPane>
